add 1 line of instructions to cv.html

--- a/static/fr/cv/cv.html
+++ b/static/fr/cv/cv.html
@@ -14,6 +14,7 @@
     <header>
         <h1>Contribuez à la préservation de votre langue</h1>
         <p>Participez à la plus grande collecte de données vocales libres et publiques au monde. Suivez ces trois étapes simples pour enregistrer votre voix et aider à donner à votre langue une place dans les technologies de demain.</p>
+    	<p style='font-weight:bold;'>Lisez bien les instructions jusqu'au bout.</p>
     </header>
 
     <main>
