updated common voice login link

--- a/static/fr/cv/cv.html
+++ b/static/fr/cv/cv.html
@@ -26,7 +26,7 @@
                     <div class="step-content" style="text-align:center;">
                         <h3>Créez votre compte Common Voice</h3>
                         <p>Complétez votre profil, acceptez la politique de confidentialité de Common Voice, et validez pour créer votre compte.</p>
-                      <a href="https://commonvoice.mozilla.org/login?" class="button" target="_blank">Créer mon compte</a>
+                      <a href="https://commonvoice.mozilla.org/spontaneous-speech/beta/prompts" class="button" target="_blank">Créer mon compte</a>
                         <img  src="img/login-cv.png" alt="login Common Voice">
                         <img src="img/profil-cv.png" alt="Profile Common Voice">
                     </div>
