updated journee tal ls

--- a/static/fr/journee_tal_ls/page.html
+++ b/static/fr/journee_tal_ls/page.html
@@ -12,11 +12,20 @@
 
 <h1>Journée COLAF<br>Traitement automatique des langues des signes</h1>
 
-<p>Le Défi COLaF, un projet Inria, organise avec le soutien de l'Atala une journée d'étude sur le traitement des langues des signes à destination de la communauté des chercheurs francophones. Elle se déroulera le 12 juin à Nancy, France.
+<h2>19 juin 2026 - Nancy, France</h2>
 
-<p>Les langues des signes comme objet d'étude rassemblent des chercheurs de domaines et thématiques variés, dont: la linguistique, la psycholinguistique, le TAL, l'IA, le traitement du signal, la sociologie, la didactique...  La communauté des chercheurs francophones est petite avec un champ d'étude vaste. Cela présente un risque de communauté morcelée et de collaborations manquées. Par cette journée d'étude, nous souhaitons faire un état des lieux des travaux et ressources, enrichir le réseau, afin d'encourager la collaboration et le partage des ressources et des idées.
+<h3>Organisation: Défi COLaF (Centre Inria de l'Université de Lorraine) avec le soutien de l'ATALA</h3>
 
-<p>Cette journée s'adresse à tous les chercheurs.ses francophones ayant la/les langues des signes comme sujet d'étude, ou un besoin de l'analyser via des méthodes informatiques. Cela inclue :
+<!--<p>Le Défi COLaF, un projet Inria, organise avec le soutien de l'Atala une journée d'étude sur le traitement des langues des signes à destination de la communauté des chercheurs francophones. Elle se déroulera le 12 juin à Nancy, France.-->
+
+<!--<p>Les langues des signes comme objet d'étude rassemblent des chercheurs de domaines et thématiques variés, dont: la linguistique, la psycholinguistique, le TAL, l'IA, le traitement du signal, la sociologie, la didactique...  La communauté des chercheurs francophones est petite avec un champ d'étude vaste. Cela présente un risque de communauté morcelée et de collaborations manquées. Par cette journée d'étude, nous souhaitons faire un état des lieux des travaux et ressources, enrichir le réseau, afin d'encourager la collaboration et le partage des ressources et des idées.-->
+
+<p>Les langues des signes (LS) s’imposent comme un objet d’étude transversal, fédérant des chercheurs provenant de champs disciplinaires multiples : linguistique, psycholinguistique, Traitement Automatique des Langues (TAL), Intelligence Artificielle (IA), traitement du signal, sociologie ou encore didactique.
+Bien que dynamique, la communauté francophone œuvrant sur ces thématiques reste dispersée face à l'immensité du champ d'étude. Cette fragmentation freine l'émergence de collaborations structurantes.
+<p>Dans le cadre du projet Inria Défi COLaF (Corpus et Outils pour les Langues de France), nous organisons une journée d'étude dédiée au traitement des langues des signes.
+L'objectif est double : dresser un état de l'art des travaux et ressources existants, et consolider le réseau des chercheurs francophones pour favoriser le partage d'expertises, de données et d'outils.
+
+<!--<p>Cette journée s'adresse à tous les chercheurs.ses francophones ayant la/les langues des signes comme sujet d'étude, ou un besoin de l'analyser via des méthodes informatiques. Cela inclue :
 
 <ul>
 <li> Traitement automatique de la langue, traduction automatique
@@ -28,39 +37,59 @@
 <li> Logiciels et outillage, par exemple pour l'édition de vidéo, la TAO ou l'enseignement
 <li> Éthique et gestion des données
 <li> Implication de la communauté sourde/DHH, conception centrée sur l'utilisateur, ressources destinées à la communauté sourde/DHH ou aux apprenants
+</ul>-->
+
+<p>Cette journée s'adresse à l'ensemble de la communauté scientifique francophone (chercheurs, doctorants, ingénieurs) travaillant sur la/les langues des signes, ou appliquant des méthodes informatiques à leur analyse.
+
+<p>Les thématiques incluent, de manière non exhaustive :
+<ul>
+<li> Linguistique et Corpus : Création et annotation de corpus, dictionnaires, modélisation linguistique.
+<li>TAL et IA : Traduction automatique, reconnaissance automatique (vision par ordinateur), avatars et synthèse (production), métriques et méthodes d'évaluation.
+<li> Outils et Applications : Logiciels de TAO, édition vidéo, outils pour l'enseignement, ressources pour la communauté sourde/DHH.
+<li> Enjeux Sociétaux : Éthique, gestion des données, conception centrée utilisateur, implication de la communauté sourde.
 </ul>
 
-<p>Cette journée est portée par le Défi COLaF : Corpus et Outils pour les Langues de France. L'objectif de ce projet est de soutenir le développement du TAL pour les langues de France. Cela inclue l'outillage, la publication de corpus, et le soutien aux acteurs de la langue. Cette journée d'étude s'inscrit dans notre démarche de collaboration avec les acteurs de chaque langue traitée par le projet. Nos partenaires incluent Lo'Congress (pour l'occitan), l'Agence Régionale de la Langue Picarde, et l'Université de Strasbourg (pour l'alsacien). Par cette journée, nous souhaitons promouvoir et soutenir la collaboration entre les différents acteurs de la LSF et des autres langues des signes de la francophonie.
+<!--<p>Cette journée est portée par le Défi COLaF : Corpus et Outils pour les Langues de France. L'objectif de ce projet est de soutenir le développement du TAL pour les langues de France. Cela inclue l'outillage, la publication de corpus, et le soutien aux acteurs de la langue. Cette journée d'étude s'inscrit dans notre démarche de collaboration avec les acteurs de chaque langue traitée par le projet. Nos partenaires incluent Lo'Congress (pour l'occitan), l'Agence Régionale de la Langue Picarde, et l'Université de Strasbourg (pour l'alsacien). Par cette journée, nous souhaitons promouvoir et soutenir la collaboration entre les différents acteurs de la LSF et des autres langues des signes de la francophonie.-->
+
+<p>Cette journée est portée par le Défi COLaF, visant à soutenir le TAL pour les langues de France. À l'instar de nos travaux sur les langues régionales (en partenariat avec Lo Congrès, l'Agence de la Langue Picarde, et l'Université de Strasbourg), nous souhaitons par cette journée promouvoir les synergies entre les acteurs de tous horizons de la LSF et autres langues des signes de la francophonie.
+
+
+<h2>Accessibilité</h2>
+
+<p>La journée sera entièrement interprétée en LSF. Merci d'indiquer lors de votre inscription si vous souhaitez bénéficier de l'interprétation, ou viendrez avec votre propre interprète.
+</p>
 
 
 <h2>Appel à contributions</h2>
 
-<p>Cette journée se veut non-sélective afin de permettre l'accès à des chercheurs d'horizons différents.
+<!--<p>Cette journée se veut non-sélective afin de permettre l'accès à des chercheurs d'horizons différents.
 L'objectif est de faire un tour d'horizon de la communauté et de ses activités. 
-Les contributions attendues doivent donc représenter vos travaux en cours ou récents. Il peut s'agir de travaux déjà publiés.
+Les contributions attendues doivent donc représenter vos travaux en cours ou récents. Il peut s'agir de travaux déjà publiés.-->
 
-<p><strong>Les propositions de communication se feront sous la forme d'un résumé en français d'environ 300 mots ou d'une vidéo d'environ 1 minute en LSF.</strong> Ceux-ci conduiront à un poster ou communication orale. Vous serez notifiés de la forme choisie pour votre contribution. Si vous souhaitez soumettre un résumé dans une langue des signes autre que LSF, merci de contacter le comité.
+<p>Cette journée se veut inclusive et privilégie les échanges. Nous encourageons la soumission de travaux en cours, de projets récents, ou de résultats déjà publiés nécessitant une nouvelle mise en lumière auprès de la communauté TAL/LS.
 
-<p>Liens de soumission et d'inscription à venir.
+<p><strong>Les propositions de communication se feront sous la forme d'un résumé en français d'environ 300 mots ou d'une vidéo d'environ 1 minute en LSF.</strong>
+
+<p><strong><a href="https://openreview.net/group?id=inria.fr/INRIA/COLaF/2026/Challenge">Lien de soumission</a></strong>
+
+<p>Les contributions acceptées seront présentées sous forme de poster ou de communication orale. Le comité d'organisation précisera le format retenu lors de la notification.
+Le comité scientifique ne peut évaluer que des vidéos en LSF. Si vous souhaitez soumettre dans une langue des signes autre que LSF, merci de contacter le comité afin que nous puissions trouver une solution.
+
 
 <h2>Calendrier</h2>
 
 <ul>
 <li>Ouverture de l'appel à contribution : début février
-<li>Date limite de soumission : 20 février
-<li>Notification d'acceptation : début mars
-<li>Date limite d'inscription : 1er avril
-<li>Journée d'étude : 12 juin
+<li>Date limite de soumission : 16 mars (<a href="https://openreview.net/group?id=inria.fr/INRIA/COLaF/2026/Challenge">Lien de soumission</a>)
+<li>Notification d'acceptation : début avril
+<li>Date limite d'inscription : mi avril (Lien à venir)
+<li>Journée d'étude : 19 juin
 </ul>
 
-<h2>Accessibilité</h2>
-
-<p>La journée sera interprétée en LSF. Merci d'indiquer lors de votre inscription si vous souhaitez bénéficier de l'interprétation, ou viendrez avec votre propre interprète.
-</p>
 
 <h2>Infos pratiques</h2>
-<p>Cette journée se déroulera en présentiel uniquement, au campus Inria de l'Université de Lorraine. Bâtiment Ada Lovelace, 615 Rue du Jardin-Botanique, 54600 Villers-lès-Nancy.
-Elle sera gratuite, avec inscription obligatoire.
+<p>Cette journée se déroulera en présentiel uniquement, au campus Inria de l'Université de Lorraine, à l'adresse suivante : Bâtiment Ada Lovelace, 615 Rue du Jardin-Botanique, 54600 Villers-lès-Nancy.
+<p>Elle sera gratuite, avec inscription obligatoire.
 
 <h2>Contact</h2>
 
