update page journee tal ls

--- a/static/fr/journee_tal_ls/page.html
+++ b/static/fr/journee_tal_ls/page.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-<h1>Journée COLAF<br>Traitement automatique des langues des signes</h1>
+<h1>Journée d'études<br>Traitement automatique des langues des signes</h1>
 
-<h2>19 juin 2026 - Nancy, France</h2>
+<h2>18 juin 2026 - Nancy, France</h2>
 
 <h3>Organisation: Défi COLaF (Centre Inria de l'Université de Lorraine) avec le soutien de l'ATALA</h3>
 
@@ -83,7 +83,7 @@ Le comité scientifique ne peut évaluer que des vidéos en LSF. Si vous souhait
 <li>Date limite de soumission : 16 mars (<a href="https://openreview.net/group?id=inria.fr/INRIA/COLaF/2026/Challenge">Lien de soumission</a>)
 <li>Notification d'acceptation : début avril
 <li>Date limite d'inscription : mi avril (Lien à venir)
-<li>Journée d'étude : 19 juin
+<li>Journée d'étude : 18 juin
 </ul>
 
 
@@ -91,9 +91,25 @@ Le comité scientifique ne peut évaluer que des vidéos en LSF. Si vous souhait
 <p>Cette journée se déroulera en présentiel uniquement, au campus Inria de l'Université de Lorraine, à l'adresse suivante : Bâtiment Ada Lovelace, 615 Rue du Jardin-Botanique, 54600 Villers-lès-Nancy.
 <p>Elle sera gratuite, avec inscription obligatoire.
 
-<h2>Contact</h2>
+<h2>Organisation et contact</h2>
 
 <p>Pour toute question ou problème, merci de nous contacter à l'adresse colaf-contact@inria.fr
+
+<p style="white-space:pre;">Comité d'organisation :
+Sam Bigeard, Université de Lorraine
+Caroline Bogliotti, Université Paris Nanterre
+Michael Filhol, Université Paris-Saclay
+</p>
+
+<p style="white-space:pre;">Comité scientifique :
+Sam Bigeard, Université de Lorraine
+Caroline Bogliotti, Université Paris Nanterre
+Michael Filhol, Université Paris-Saclay
+Mostafa Saghedi, Université de lorraine
+Guilhem Fauré, Université de Lorraine
+Slim Ouni, Université de Lorraine
+</p>
+
 
 <h2>Remerciements</h2>
 <p>Cette journée est financée par le Plan National de Recherche en Intelligence Artificielle, et par l'Association pour le Traitement Automatique des Langues.</p>
